# InfoRadar

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: daily-inforadar.yml
configs/boards/: unreal.toml
crates/inforadar-cli/: Cargo.toml
crates/inforadar-cli/src/: main.rs
crates/inforadar-collectors/: Cargo.toml
crates/inforadar-collectors/src/: lib.rs
crates/inforadar-core/: Cargo.toml
crates/inforadar-core/src/: lib.rs
crates/inforadar-site/: Cargo.toml
crates/inforadar-site/src/: lib.rs
crates/inforadar-store/: Cargo.toml
crates/inforadar-store/src/: lib.rs
docs/: DATA_POLICY.md
docs/guides/adding-board/: index.md
docs/guides/adding-source/: index.md
docs/plans/: 2026-06-20-001-feat-inforadar-rust-daily-workbench-plan.md
