[workspace]
members = [
  "crates/inforadar-core",
  "crates/inforadar-store",
  "crates/inforadar-collectors",
  "crates/inforadar-site",
  "crates/inforadar-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
feed-rs = "2"
hex = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
url = "2"
walkdir = "2"
